--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Phychic Game</title>
+    <title>Physics game</title>
 </head>
 <body>
     <div class="content">
-        <h2> Pdychic Game HW</h2>
-        <p> Guess the letter I have selected</p>
-        <div class="inner-content">
-        <p id="wins"></p>
-        <p id="losses"></p>
-        <p id="guessesR"></p>
-        <p id="guessesU"></p>
-    </div>
-    </div>
-    <script src="assets/javascript/game.js"></script>
+        <h2>Physics game</h2>
 
+        <p> To begain type any letter, try to find the letter that was randomly selected.</p>
+
+        <div class="inner-content">
+
+            <p id="wins"></p>
+            <p id="losses"></p>
+            <p id="guessesLeft"></p>
+            <p id="GuessesSoFar"></p>
+
+        </div>
+
+    </div>
+
+    <script src="assets/javascript/game.js"></script>
+    
 </body>
+
 </html>
