displays used lettters

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ var guessesLeft = 9;
 var userLetter = [];
 var cpuLetter = [];
 
-var guessesleftText = document.getElementById("guessleft");
+var guessleftText = document.getElementById("guessleft");
 var guessfarText = document.getElementById("guessfar");
 var winsText = document.getElementById("wins");
 var lossesText = document.getElementById("losses");
